# git-controller

./: .env.template  .gitignore  Cargo.toml  Deploiment.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml
.github/workflows/: docker.yml  github-auth.yml  pull_request.yml  push.yml
buildpacks/config-reader-hook/: config_reader.sh
buildpacks/config-reader-hook/.paastech/: config.json
buildpacks/project_detector/: Cargo.toml
buildpacks/project_detector/src/: main.rs
buildpacks/rust-hook-poc/: .env.example  Cargo.toml
buildpacks/rust-hook-poc/src/: database.rs  docker.rs  main.rs
git-auth-layer/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  compose.yml
git-auth-layer/config/: config.env  sshd_config
git-auth-layer/data/: entrypoint.sql
git-auth-layer/scripts/: client-entrypoint.sh  init-dev-env.sh
git-auth-layer/src/: config.rs  constants.rs  main.rs  utils.rs
git-repo-manager/: .env  Cargo.toml  README.md  docker-compose.yml  dockerfile
git-repo-manager/src/: main.rs  service.rs
git-repo-manager/src/hooks/: post-receive
grpc-client-debug/: Cargo.toml  README.md
grpc-client-debug/src/: main.rs
hooks/: post-receive
src/repo-manager/: constants.rs  main.rs  service.rs
ssh-keys-fuse/: .env  README.md  compose.yml
ssh-keys-fuse/src/: constants.rs  main.rs
