[package]
name = "git-repo-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = "0.9"
prost = "0.11"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
paastech-proto = { git = "https://github.com/paastech-cloud/proto.git", rev = "1520c877f55a6c885e75ee59024c19597b1030a2" }
pretty_env_logger = "0.3.1"
log = "0.4"

[[bin]]
name= "repo-manager"
path= "src/repo-manager/main.rs"

[[bin]]
name= "client-debug"
path= "src/client-debug/main.rs"