[package]
name = "git-auth-layer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.4"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "postgres"]}
tokio = { version = "1.28.2", features = ["macros"] }
