[package]
name = "grpc-client-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.9"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
paastech-proto = { git = "https://github.com/paastech-cloud/proto.git", rev = "1520c877f55a6c885e75ee59024c19597b1030a2" }
